# CRISPR-cassets-finder

./: .gitignore  4  CMakeLists.txt  OUTPUT.txt  README.md  bfs_time.py  for_checking.txt  graph_analysis.h  graph_assembly.h  main.cpp  sequence_1  visualise.h
data/: for_checking.txt  seq1.txt
